# Adaptive-Threat-Modeler

./: .gitignore  LOGS_FEATURE.md  PROJECT_DOCUMENTATION.md  README.md  deployemt.yaml  dns.py  hello.cpp  insecure.py  leaky.yaml  prod.sh  shadow-infra.tf  test-commit-analysis.md  test-detailed-diff.md  test_file.txt  threat.py
backend/: Dockerfile  README.md  env.example  go.mod  go.sum  main.go
backend/cmd/git-hook/: main.go
backend/data/commits/: commit_52f4209f.json  commit_97fd04e9.json  commit_a50aebc8.json  commit_f114c2fb.json  commit_f9bae219.json  latest.json
backend/internal/: index.html
backend/internal/api/: routes.go
backend/internal/config/: config.go
backend/internal/handlers/: analysis.go  commit_analysis.go  detection.go  rules.go  system.go
backend/internal/models/: models.go
backend/internal/services/: analyzer.go  ast_parser.go  commit_storage.go  dataflow.go  detector.go  git_service.go  pattern_matcher.go  rules.go
backend/scripts/: setup-git-hooks.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutSection.tsx  ContactSection.tsx  Footer.tsx  HeroSection.tsx  LogVisualizer.tsx  Navigation.tsx  ParticleBrain.tsx  ProductSection.tsx  Scene3D.tsx  ServicesSection.tsx
mcp/: .env  .gitignore  README.md  agent.py  api.py  debug_slack_integration.py  main.py  pyproject.toml  requirements.txt  setup_github_integration.py  simple_multi_agent.py  test_api.py  test_github_integration.py  vuln_sample.py
(+5 files in other folders)
